syntax = "proto3";

option csharp_namespace = "Grpc.Dto";

import "response.proto";

message VerificationCodeDto {
    string code = 1;
    int32 lifeTimeMinutes = 2;
}

message ConnectionInfoDto {
    optional string os = 1;
    optional string browser = 2;
    optional string ip = 3;
    optional string location = 4;
}

message ConnectionDto {
    string connectionId = 1;
    int32 activeSecondsAgo = 2;
    ConnectionInfoDto connectionInfo = 3;
}

message ConnectionsPageDto {
    repeated ConnectionDto connections = 1;
    PageInfoDto pageInfo = 2;
}

message UserIdDto {
    int64 userId = 1;
}

message TokenDto {
    string accessToken = 1;
    string refreshToken = 2;
}

message SignInRequestDto {
    string verificationCode = 1;
    ConnectionInfoDto connectionInfo = 2;
}

message ConnectionsRequestDto {
    int64 userId = 1;
    PageInfoDto pageInfo = 2;
}

message ConnectionRequestDto {
    int64 userId = 1;
    string connectionId = 2;
}

message VerificationCodeResponseDto {
    ResponseDto response = 1;
    VerificationCodeDto verificationCode = 2;
}

message ConnectionsPageResponseDto {
    ResponseDto response = 1;
    ConnectionsPageDto connectionsPage = 2;
}

message SignInResponseDto {
    ResponseDto response = 1;
    TokenDto token = 2;
}