syntax = "proto3";

option csharp_namespace = "Grpc.Services";

import "response.proto";
import "identitydto.proto";

service IdentityService {
    rpc GetVerificationCode(UserIdDto) returns (VerificationCodeResponseDto);
    rpc GetConnections(ConnectionsRequestDto) returns (ConnectionsPageResponseDto);
    rpc CloseConnection(ConnectionRequestDto) returns (ResponseDto);
}